--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,15 +28,17 @@ jobs:
         run: |
           gcloud compute ssh s0929834901@instance-20250416-131426 \
             --zone=us-central1-c --command="
+              set -e  # 🔥 有錯就停止
               cd /var/www &&
-              rm -rf marketing_server &&
+              rm -rf marketing_server || true &&
               git clone https://github.com/tainyuhu/pin_server.git marketing_server &&
               cd marketing_server &&
               python3 -m venv venv &&
               source venv/bin/activate &&
               pip install -r requirements.txt &&
-              pip install gunicorn &&
+              pip install gunicorn &&  # ✅ 強制補 gunicorn
               python manage.py migrate &&
               pkill gunicorn || true &&
               gunicorn config.wsgi:application --bind 127.0.0.1:8000 --daemon
             "
+
