--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,16 +31,15 @@ jobs:
               set -e
               sudo apt-get update &&
               sudo apt-get install -y default-libmysqlclient-dev build-essential pkg-config &&
-              
-              # 🔥 先刪掉舊的資料夾，再新建並調整權限
+      
+              # 建乾淨目錄 + 正確擁有者（這行修好了！）
               sudo rm -rf /var/www/marketing_server &&
               sudo mkdir -p /var/www/marketing_server &&
-              sudo chown -R $USER:$USER /var/www/marketing_server &&
-              
+              sudo chown -R s0929834901:s0929834901 /var/www/marketing_server &&
+      
               cd /var/www &&
               git clone https://github.com/tainyuhu/pin_server.git marketing_server &&
               cd marketing_server &&
-              
               python3 -m venv venv &&
               source venv/bin/activate &&
               pip install -r requirements.txt &&
@@ -49,4 +48,5 @@ jobs:
               pkill gunicorn || true &&
               gunicorn config.wsgi:application --bind 127.0.0.1:8000 --daemon
             "
+
 
